# llm-ops

./: .gitignore  GEMINI.md  MANIFEST.in  README.md  pyproject.toml  setup.py
llm_ops/: main.py  utils.py
llm_ops/antigravity/: ops.py
llm_ops/augment/: ops.py
llm_ops/continue_agent/: ops.py
llm_ops/resources/memory/: AGENTS.md  GEMINI.md
llm_ops/resources/rules/: AGENTS.md  clean-code.md  memory.md
llm_ops/resources/workflows/: ask.md  code-review.md  explain.md  explore.md  green.md  red.md  refactor.md  uncle-bob.md
tests/: test_main.py
